# sentiment-stocks-ai

./: README.md  pyproject.toml
app/: run_deepseek.py  run_gpt.py
notebooks/: exploratory_analysis.ipynb
